# You must change these to your own details.
[package]
name = "mustache"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["David Duthie <dave.a.duthie@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "7.0.0"
serde_json = "1.0.68"
string-builder = "0.2.0"
lazy_static = "1.4.0"

[dependencies.wasm-bindgen]
version = "0.2.78"
features = ["serde-serialize"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.55"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.17"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
